--- a/cliente/package.json
+++ b/cliente/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.10.4",
+    "axios": "^0.19.0",
+    "history": "^4.9.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
